--- a/CSS Mysite/index.html
+++ b/CSS Mysite/index.html
@@ -57,9 +57,9 @@
       
       
       <div class="bottom">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/hrishikesh-sarate-97858b160">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/Hrishisarate?t=7vJVpaeanVePyug7GP-frg&s=08">Twitter</a>
+        <a class="footer-link" href="https://hpsportfolio.dorik.io/">Website</a>
         <p>© Hrishikesh Sarate.</p>
       </div>
     </body>
